[gd_scene load_steps=2 format=3 uid="uid://cyh44o834ptxj"]

[ext_resource type="Script" uid="uid://n7xo80gucumt" path="res://Scenes/UI/options/button_mapping.gd" id="1_dyhuy"]

[node name="buttonMapping" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dyhuy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="btnJump" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Jump"

[node name="btnDash" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Dash"

[node name="btnAttack" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="btnBlock" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Block"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="btnMainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MainMenu"

[node name="lblAxisValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Axis"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tmrMap" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="VBoxContainer/btnJump" to="." method="_on_btn_jump_pressed"]
[connection signal="pressed" from="VBoxContainer/btnDash" to="." method="_on_btn_dash_pressed"]
[connection signal="pressed" from="VBoxContainer/btnAttack" to="." method="_on_btn_attack_pressed"]
[connection signal="pressed" from="VBoxContainer/btnBlock" to="." method="_on_btn_block_pressed"]
[connection signal="pressed" from="VBoxContainer/btnMainMenu" to="." method="_on_btn_main_menu_pressed"]
